# FitnessBud

./: .env  .env.test  .gitignore  Dockerfile  LICENSE  ProjectTracker.md  README.md  docker-compose.yml  pyproject.toml  test_main.http
api/: deps.py  main.py
api/v1/endpoints/: auth.py  users.py  workout_logs.py
core/: config.py
domain/: schemas.py  workout_log_service.py
domain/auth/: auth_service.py
domain/user/: user_service.py
infrastructure/: db.py  ml_adapter.py  orm_models.py
infrastructure/user/: user_repository.py
infrastructure/workout/: workout_log_repository.py
models/: synthetic_workout_data.csv  workout_recommender_pipeline.joblib  workout_recommender_pipeline_goal.joblib
scripts/: train_model.py
src/: data_loader.py  model_trainer.py
templates/: recommend.html
tests/: conftest.py
tests/test_domain/: test_workout_log_service.py
